fix: make heatmap legend vertical on small screen

--- a/pages/pray/heatmap.css
+++ b/pages/pray/heatmap.css
@@ -310,3 +310,17 @@ progress {
     margin-right: 10px;
     border-radius: 5px;
 }
+
+@media ( max-width: 576px ) {
+    #map-legend[data-map-type="heatmap"] {
+        flex-direction: column;
+    }
+
+    #map-legend[data-map-type="heatmap"] > * + * {
+        margin-left: 0;
+    }
+
+    #map-legend[data-map-type="heatmap"] .map-legend__color-swatch {
+        border-radius: 0;
+    }
+}
